# adacotech-game-practice-server

./: .gitignore  pyproject.toml
practice/practice/: settings.py  urls.py
practice/ranking/: models.py  serializers.py  views.py
practice/ranking/migrations/: 0001_initial.py
