[tool.poetry]
name = "adacotech-game-practice-server"
version = "0.1.0"
description = ""
authors = ["kackyt <t.kakizaki@adacotech.co.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.5"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
